test/parse/expr/bad-select-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    i32.const 0
    i32.const 0
    i32.const 0
    i32.const 0
    i32.const 0
    select (result i32 i32)
    unreachable
    ))
(;; STDERR ;;;
out/test/parse/expr/bad-select-multi.txt:10:5: error: invalid arity in select instruction: 2.
    select (result i32 i32)
    ^^^^^^
out/test/parse/expr/bad-select-multi.txt:10:5: error: type mismatch in function, expected [] but got [... i32, i32, i32, i32]
    select (result i32 i32)
    ^^^^^^
;;; STDERR ;;)
